--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,11 @@ codegen-units = 1
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4"
 csv = "1.1"
 regex = "1.5"
 reqwest = { version = "0.11", features = ["blocking"] }
 rusqlite = "0.25.4"
 serde_json = "1.0"
 sha2 = "0.10"
+# Pin time to 0.3.2, because 0.3.3 needs rustc 1.51, but our MSRV is 1.48.0.
+time = { version = "=0.3.2", features = ["formatting", "parsing"] }
